Added modal to display author info

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -14,7 +14,23 @@
 
     <% } %>
 
-    <div id="authorInfo"></div>
+    <!-- Modal -->
+    <div class="modal fade" id="authorModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Author Information</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="authorInfo"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <%- include("partials/footer.ejs") %>
     <script src="/js/script.js"></script>
